--- a/Exercise 12/index.html
+++ b/Exercise 12/index.html
@@ -6,7 +6,6 @@
 
 <title>Page Title</title>
 <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
@@ -15,11 +14,11 @@
 
   <div class='div-wrapper'>
 
-    <div class='main-div'>div 1
+    <div class='main-div'>div1
 
-      <div class=div2>div2</div>
+      <div class="div2">div2</div>
 
-      <div class=div3>div3</div>
+      <div class="div3">div3</div>
 
   </div>
 
