--- a/Exercise 14/index.html
+++ b/Exercise 14/index.html
@@ -2,12 +2,15 @@
 
 <html>
 
+ 
+
 <head>
 
-<title>Page Title</title>
+  <title>Page Title</title>
 <link rel="stylesheet" href="./style.css">
-
 </head>
+
+ 
 
 <body>
 
@@ -15,11 +18,9 @@
 
   <div class='div-wrapper'>
 
-    <div class='main-div'>div 1
+    <div class='div1'>div1</div>
 
-      <div class=div2>div2</div>
-
-      <div class=div3>div3</div>
+    <div class="div2">div2</div>
 
   </div>
 
