--- a/Exercise 9/index.html
+++ b/Exercise 9/index.html
@@ -6,7 +6,6 @@
 
 <title>Page Title</title>
 <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
@@ -17,9 +16,9 @@
 
     <div class='main-div'>div 1
 
-      <div class=div2>div2</div>
+      <div class="div2">div2</div>
 
-      <div class=div3>div3</div>
+      <div class="div3">div3</div>
 
   </div>
 
